--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
   <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
   <string name="expo_splash_screen_status_bar_translucent" translatable="false">false</string>
   <!-- Aquí puedes agregar otras configuraciones de texto -->
-    <string name="google_maps_api_key">${apikeym}</string>
+    <string name="google_maps_api_key">AIzaSyBjEStP5x1djVt-rLvnEzv4HQ14RSZY2OY</string>
 </resources>
